break entfernt bei project footer

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -145,7 +145,7 @@
 
   <footer>
     <p><a title="Go to github.com/SebastianHauss" href="https://github.com/SebastianHauss" target="_blank"><img src="../img/github_icon.png" alt="GitHub icon link" class="contactIcons contactIconsText"></a></p><br>
-    <p><a title="Go to at.linkedin.com/..." href="" target="_blank"><img src="../img/linkedin_icon.png" alt="LinkedIn icon" class="contactIcons"></a></p><br>
+    <p><a title="Go to at.linkedin.com/..." href="" target="_blank"><img src="../img/linkedin_icon.png" alt="LinkedIn icon" class="contactIcons"></a></p>
   </footer>
   
 </body>
